drivers: input-touchscreen: focaltech_touch: fix ignoring type redefinition

--- a/drivers/input/touchscreen/focaltech_touch/Kconfig
+++ b/drivers/input/touchscreen/focaltech_touch/Kconfig
@@ -3,7 +3,7 @@
 #
 
 config TOUCHSCREEN_FTS
-    bool "Focaltech Touchscreen"
+    tristate "Focaltech Touchscreen"
     default n
     depends on TOUCHSCREEN_FTS_CHIPSET
     help
